--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ p {
     
    
    .logo {
-   margin-left: 185px;
+   margin-left: 150px;
    width: 20%;
    }
 
@@ -235,6 +235,15 @@ p {
         display: block;
     }
 
+    .video-item {
+        margin-left: -10px;
+    }
+
+    iframe {
+        width: 320px;
+        margin-bottom: 30px;
+    }
+
     footer {
         display: block;
         margin-top: -50px;
@@ -252,7 +261,7 @@ p {
         margin-top: -5px;
         margin-bottom: 15px;
         margin-left: -7px;
+        font-size: 80%;
     }
 }
-
 
